--- a/pom.xml
+++ b/pom.xml
@@ -29,39 +29,16 @@
         <module>starship-maven-plugin</module>
         <module>openjdk</module>
         <module>fiasco</module>
-        <module>starship-romfs</module>
-        <!--<module>starship-bootstrap</module>-->
-        <!--<module>starship-jvm-server</module>-->
-        <!-- Always build after ROMFS is populated -->
-        <!--<module>l4</module>-->
+        <module>starship-bootstrap</module>
+        <module>starship-jvm-server</module>
+        <!-- Always build these two modules last. -->
+        <!-- starship needs everything it depends on built -->
+        <module>starship-l4-deps</module>
+        <module>l4</module>
     </modules>
 
 
     <build>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.starship</groupId>
-                    <artifactId>maven-starship-plugin</artifactId>
-                    <version>1.0.0-SNAPSHOT</version>
-                    <executions>
-                        <execution>
-                            <id>smart-clean</id>
-                            <phase>clean</phase>
-                            <goals>
-                                <goal>smart-clean</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                </plugin>
-
-                <!-- Keep the default Maven clean plugin for target/ -->
-                <plugin>
-                    <artifactId>maven-clean-plugin</artifactId>
-                    <version>3.2.0</version>
-                </plugin>
-            </plugins>
-        </pluginManagement>
 
         <plugins>
             <plugin>
