Finalize starship-l4-deps structure and integrate staged build artifacts
- Defined target/l4-deps as the canonical, mission-critical dependency root for l4
- Integrated unpack logic for OpenJDK and Fiasco via maven-dependency-plugin
- Added copy logic for bootstrap.jar and jvm_server.jar into l4-deps
- Preserved modular separation of build-time and runtime assets
- Ensured all ROMFS-bound artifacts (JARs, OpenJDK) and L4 build inputs (headers, scripts) are logically staged
- Validated assembly.xml to reflect exact layout under target/l4-deps
- Established future-proof structure for additional dependencies (e.g. native libs, AI toolchains, shared configs)
- Froze this layout as the contractual input to l4's generate-resources phase

This is a foundational commit — l4 now consumes a deterministic, extensible dependency bundle from starship-l4-deps. Ready to begin l4 build integration.

--- a/l4/pkg/jvm_server/server/src/Makefile
+++ b/l4/pkg/jvm_server/server/src/Makefile
@@ -1,19 +1,7 @@
-PKGDIR ?= ../..
-L4DIR  ?= $(PKGDIR)/../..
+PKGDIR		?= ../..
+L4DIR		?= $(PKGDIR)/../..
 
-TARGET  = jvm_server
-SRC_CC  = main.cc
-
-# Canonical location of your unpacked OpenJDK runtime (from jdk.tar.gz)
-JDK_HOME = $(L4DIR)/target/jdk
-
-# Add include paths for JNI and platform-specific headers
-CFLAGS += -I$(JDK_HOME)/include -I$(JDK_HOME)/include/linux
-
-# Link statically against Java Launcher Interface if available
-LDADD += $(JDK_HOME)/lib/jli/libjli.a
-
-# Add system libs if you get unresolved dlopen/pthread symbols
-LDADD += -ldl -lpthread
+TARGET		= jvm_server
+SRC_C		= main.c
 
 include $(L4DIR)/mk/prog.mk
